--- a/style.css
+++ b/style.css
@@ -7,10 +7,128 @@ body {
   font-family: "Inter", sans-serif;
   font-size: 32px;
   color: #202046;
-  font-weight: 400;
+  font-weight: 300;
+}
+
+@media screen and (max-width: 375px) {
+  .testimonial-image-section {
+    padding: 30px;
+  }
+  .testimonial-image-section .img-bg img {
+    z-index: -1;
+    width: 300px;
+    width: 100%;
+  }
+
+  .testimonial-image-section .testimonial-image {
+    box-shadow: 10px 15px 50px rgba(71, 51, 51, 0.3);
+    margin: 0 auto;
+    display: block;
+    position: relative;
+    top: -280px;
+    width: 250px;
+    height: 250px;
+  }
+
+  .attribution {
+    font-size: 11px;
+    text-align: center;
+  }
+
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+  }
+
+  .bottom {
+    position: fixed;
+    bottom: 0px;
+  }
+
+  .testimonial-nav-buttons {
+    height: 35px;
+    width: 70px;
+    border-radius: 30px;
+    background-color: white;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    position: relative;
+    bottom: 300px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    z-index: 1;
+  }
+
+  .prev_btn {
+    background-image: url(./images/icon-prev.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 8px;
+    border: none;
+    border-radius: 30px 0 0 30px;
+    background-color: white;
+  }
+
+  .next_btn {
+    background-image: url(./images/icon-next.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 8px;
+    border: none;
+    border-radius: 0 30px 30px 0;
+    background-color: white;
+  }
+
+  .prev_btn:hover,
+  .next_btn:hover {
+    background-color: lightgray;
+  }
+
+  .bottom img {
+    width: 250px;
+  }
+
+  .testimonial-text {
+    max-width: 28ch;
+    position: relative;
+    font-size: 1rem;
+    text-align: center;
+    margin: 0 auto;
+    top: -325px;
+    line-height: 1.5;
+  }
+
+  .testimonial-text .student-name,
+  .testimonial-text .student-role {
+    font-size: 14px;
+    position: relative;
+    top: 10px;
+    display: block;
+  }
+
+  .testimonial-text .student-name {
+    font-weight: 800;
+  }
+
+  .testimonial-text .student-role {
+    color: hsl(240, 18%, 77%);
+  }
+
+  .testimonial-text .quotes {
+    z-index: -1;
+    position: relative;
+    top: 1.8em;
+  }
+
+  .testimonial-text .quotes img {
+    height: 40px;
+  }
 }
 
 @media screen and (min-width: 376px) {
+  .testimonial {
+    margin: 0 auto;
+    display: block;
+  }
   .testimonial-text {
     max-width: 32ch;
     position: absolute;
@@ -24,6 +142,22 @@ body {
     position: relative;
     top: 1.3em;
     left: 3.2em;
+  }
+
+  .testimonial-text .student-name,
+  .testimonial-text .student-role {
+    font-size: 20px;
+    position: relative;
+    top: 10px;
+  }
+
+  .testimonial-text .student-name {
+    font-weight: 800;
+  }
+
+  .testimonial-text .student-role {
+    color: hsl(240, 18%, 77%);
+    font-size: 20px;
   }
 
   .testimonial-image-section .img-bg img {
@@ -82,7 +216,7 @@ body {
     font-size: 14px;
     text-align: center;
   }
-  
+
   .attribution a {
     color: hsl(228, 45%, 44%);
   }
